@@ -1,3 +1,9 @@
+2008-03-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* italc.spec.in:
+	applied patch to build properly/better on recent openSUSE releases by  
+	Lars Vogdt <lars/at/linux-schulserve/dot/.de>
+
 2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ica/ica.qrc:
